# bowling-kata-1

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp  test_bowling.cpp
